@@ -161,7 +161,7 @@ public class ConnectionHolder extends ResourceHolderSupport {
 	 */
 	public boolean supportsSavepoints() throws SQLException {
 		if (this.savepointsSupported == null) {
-			this.savepointsSupported = new Boolean(getConnection().getMetaData().supportsSavepoints());
+			this.savepointsSupported = Boolean.valueOf(getConnection().getMetaData().supportsSavepoints());
 		}
 		return this.savepointsSupported.booleanValue();
 	}
